run ci on push and manual intervention
Signed-off-by: Roberto Scolaro <39174179+therealbobo@users.noreply.github.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,9 @@ name: CI
 on:
   pull_request:
     branches: [main]
+  workflow_dispatch:
+  push:
+    branches: [ master ]
 
 jobs:
   check-registry:
