--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,9 @@ name: Release Rulesfile
 
 on:
   push:
-    tags:
+    branches:
       # potential semver
-      - '[a-z]*[0-9]+.[0-9]+.[0-9]+*'
+      - 'master'
   workflow_dispatch:
 
 jobs:
